# millionandup

./: Makefile  README.md  main.py  pyproject.toml
config/: database.py
models/: owner.py  property.py  propertyimage.py  propertytrace.py
routes/: __init__.py  route.py
schema/: owner.py  property.py  property_image.py  property_trace.py
tests/: test_routes.py
utils/: unploadfile.py
