[tool.poetry]
name = "challenge-million-up"
version = "0.1.0"
description = ""
authors = ["Daniel Cabrera <danielmtv6@gmail.com>"]
readme = "README.md"
packages = [{include = "challenge_million_up"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.1"
python-multipart = "^0.0.6"
pytest = "^7.4.3"
httpx = "^0.25.1"
mongomock = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
